# Artificial_Intelligence

./: Analytic Geometry.ipynb  Linear Algebra.ipynb  Matrix Decompostion.ipynb  pyproject.toml
